--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <h1>Hello world</h1>
         <a href="page2.html">Go to next page >></a>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
