--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id="page-content">
         <h1>Hello world</h1>
-        <a href="page2.html">Go to next page >></a>
+        
     </div>
-    <script src="main.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
