--- a/404.html
+++ b/404.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv='refresh' content='0; URL=pages/landing.html'>
+    <link rel="stylesheet" href="styles.css">
     <title>My interests</title>
 </head>
 <body>
+    <h1>#404 - Not found</h1>
+    <a href="index.html">Go to main page >></a>
 </body>
 </html>
