--- a/pages/createNewDb.html
+++ b/pages/createNewDb.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv='refresh' content='0; URL=pages/landing.html'>
+    <link rel="stylesheet" href="../styles.css">
     <title>My interests</title>
 </head>
 <body>
+    
+
+    <script src="../dist/createNewDb.bundle.js"></script>
 </body>
 </html>
