404 page styling Landing page styling A link styling Fonts

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -13,24 +13,105 @@
             <svg width="467.501" height="81.401" viewBox="0 0 467.501 81.401" xmlns="http://www.w3.org/2000/svg"><g id="svgGroup" stroke-linecap="round" fill-rule="evenodd"><path d="M 280.5 80.4 L 256.6 80.4 L 256.6 40.2 L 280.5 40.2 L 280.5 43.2 L 259.6 43.2 L 259.6 46.8 L 280.5 46.8 L 280.5 49.8 L 259.6 49.8 L 259.6 55.5 L 277.3 55.5 L 277.3 58.5 L 259.6 58.5 L 259.6 62.1 L 277.3 62.1 L 277.3 65.1 L 259.6 65.1 L 259.6 70.8 L 280.5 70.8 L 280.5 73.8 L 259.6 73.8 L 259.6 77.4 L 280.5 77.4 L 280.5 80.4 Z M 358 80.4 L 334.1 80.4 L 334.1 40.2 L 358 40.2 L 358 43.2 L 337.1 43.2 L 337.1 46.8 L 358 46.8 L 358 49.8 L 337.1 49.8 L 337.1 55.5 L 354.8 55.5 L 354.8 58.5 L 337.1 58.5 L 337.1 62.1 L 354.8 62.1 L 354.8 65.1 L 337.1 65.1 L 337.1 70.8 L 358 70.8 L 358 73.8 L 337.1 73.8 L 337.1 77.4 L 358 77.4 L 358 80.4 Z M 180.3 80.4 L 177.3 80.4 L 177.3 40.2 L 180.3 40.2 L 197.5 64.1 L 197.5 40.2 L 200.5 40.2 L 200.5 80.4 L 197.5 80.4 L 180.3 56.5 L 180.3 80.4 Z M 295.9 80.4 L 292.9 80.4 L 292.9 40.2 L 308.6 40.2 Q 313.5 40.3 317 43.55 A 10.696 10.696 0 0 1 320.238 49.566 A 15.69 15.69 0 0 1 320.5 52.5 A 14.928 14.928 0 0 1 320.117 55.963 A 11.093 11.093 0 0 1 318.35 59.9 Q 316.2 62.9 312.8 64.1 L 319.8 80.4 L 316.5 80.4 L 309.9 64.7 Q 309.1 64.8 308.6 64.8 L 306 64.8 L 312.6 80.4 L 309.3 80.4 L 302.7 64.8 L 295.9 64.8 L 295.9 80.4 Z M 226.7 80.4 L 223.7 80.4 L 223.7 49.8 L 212.1 49.8 L 212.1 46.8 L 245 46.8 L 245 49.8 L 233.3 49.8 L 233.3 80.4 L 230.3 80.4 L 230.3 49.8 L 226.7 49.8 L 226.7 80.4 Z M 413.3 80.4 L 410.3 80.4 L 410.3 49.8 L 398.7 49.8 L 398.7 46.8 L 431.6 46.8 L 431.6 49.8 L 419.9 49.8 L 419.9 80.4 L 416.9 80.4 L 416.9 49.8 L 413.3 49.8 L 413.3 80.4 Z M 362.8 70.3 L 365.8 69.9 A 8.344 8.344 0 0 0 369.058 75.509 A 11.583 11.583 0 0 0 369.8 76.05 A 13.227 13.227 0 0 0 374.196 77.917 Q 375.98 78.336 378.057 78.391 A 24.044 24.044 0 0 0 378.7 78.4 A 20.72 20.72 0 0 0 382.663 78.043 Q 385.031 77.581 386.903 76.524 A 11.824 11.824 0 0 0 388.1 75.75 Q 391.7 73.1 391.7 68.5 A 9.679 9.679 0 0 0 391.324 65.737 A 7.54 7.54 0 0 0 389.4 62.5 Q 387.513 60.613 384.212 59.533 A 22.162 22.162 0 0 0 382.7 59.1 L 376.6 57.5 A 23.858 23.858 0 0 1 374.541 56.861 Q 372.609 56.157 371.4 55.25 A 4.616 4.616 0 0 1 370.185 53.933 Q 369.618 52.985 369.601 51.778 A 5.324 5.324 0 0 1 369.6 51.7 A 4.659 4.659 0 0 1 371.283 48.039 A 6.879 6.879 0 0 1 372.15 47.4 Q 374.381 46 377.721 45.825 A 18.688 18.688 0 0 1 378.7 45.8 A 15.632 15.632 0 0 1 381.458 46.03 Q 383.033 46.313 384.321 46.941 A 9.184 9.184 0 0 1 384.9 47.25 A 7.216 7.216 0 0 1 386.248 48.239 A 4.531 4.531 0 0 1 387.7 51 L 384.8 51.4 A 2.499 2.499 0 0 0 383.47 49.669 Q 381.938 48.8 378.7 48.8 A 17.005 17.005 0 0 0 376.986 48.881 Q 376.147 48.966 375.446 49.141 A 6.975 6.975 0 0 0 374.25 49.55 A 3.95 3.95 0 0 0 373.492 49.992 Q 372.6 50.671 372.6 51.7 Q 372.6 52.475 373.415 53.064 A 3.685 3.685 0 0 0 373.7 53.25 A 6.199 6.199 0 0 0 374.306 53.556 Q 375.609 54.141 378.5 55 L 383.8 56.5 Q 389 58 391.85 60.9 A 9.777 9.777 0 0 1 394.543 66.396 A 13.634 13.634 0 0 1 394.7 68.5 A 12.978 12.978 0 0 1 393.994 72.876 A 11.009 11.009 0 0 1 390.25 77.95 Q 385.8 81.4 378.7 81.4 A 23.146 23.146 0 0 1 373.798 80.908 A 16.196 16.196 0 0 1 367.75 78.3 A 12.752 12.752 0 0 1 364.747 75.364 A 10.793 10.793 0 0 1 362.8 70.3 Z M 435.6 70.3 L 438.6 69.9 A 8.344 8.344 0 0 0 441.858 75.509 A 11.583 11.583 0 0 0 442.6 76.05 A 13.227 13.227 0 0 0 446.996 77.917 Q 448.78 78.336 450.857 78.391 A 24.044 24.044 0 0 0 451.5 78.4 A 20.72 20.72 0 0 0 455.463 78.043 Q 457.831 77.581 459.703 76.524 A 11.824 11.824 0 0 0 460.9 75.75 Q 464.5 73.1 464.5 68.5 A 9.679 9.679 0 0 0 464.124 65.737 A 7.54 7.54 0 0 0 462.2 62.5 Q 460.313 60.613 457.012 59.533 A 22.162 22.162 0 0 0 455.5 59.1 L 449.4 57.5 A 23.858 23.858 0 0 1 447.341 56.861 Q 445.409 56.157 444.2 55.25 A 4.616 4.616 0 0 1 442.985 53.933 Q 442.418 52.985 442.401 51.778 A 5.324 5.324 0 0 1 442.4 51.7 A 4.659 4.659 0 0 1 444.083 48.039 A 6.879 6.879 0 0 1 444.95 47.4 Q 447.181 46 450.521 45.825 A 18.688 18.688 0 0 1 451.5 45.8 A 15.632 15.632 0 0 1 454.258 46.03 Q 455.833 46.313 457.121 46.941 A 9.184 9.184 0 0 1 457.7 47.25 A 7.216 7.216 0 0 1 459.048 48.239 A 4.531 4.531 0 0 1 460.5 51 L 457.6 51.4 A 2.499 2.499 0 0 0 456.27 49.669 Q 454.737 48.8 451.5 48.8 A 17.005 17.005 0 0 0 449.786 48.881 Q 448.947 48.966 448.246 49.141 A 6.975 6.975 0 0 0 447.05 49.55 A 3.95 3.95 0 0 0 446.292 49.992 Q 445.4 50.671 445.4 51.7 Q 445.4 52.475 446.215 53.064 A 3.685 3.685 0 0 0 446.5 53.25 A 6.199 6.199 0 0 0 447.106 53.556 Q 448.409 54.141 451.3 55 L 456.6 56.5 Q 461.8 58 464.65 60.9 A 9.777 9.777 0 0 1 467.343 66.396 A 13.634 13.634 0 0 1 467.5 68.5 A 12.978 12.978 0 0 1 466.794 72.876 A 11.009 11.009 0 0 1 463.05 77.95 Q 458.6 81.4 451.5 81.4 A 23.146 23.146 0 0 1 446.598 80.908 A 16.196 16.196 0 0 1 440.55 78.3 A 12.752 12.752 0 0 1 437.547 75.364 A 10.793 10.793 0 0 1 435.6 70.3 Z M 369.3 69.4 L 372.3 69 A 2.003 2.003 0 0 0 372.967 70.335 Q 373.255 70.607 373.668 70.836 A 5.243 5.243 0 0 0 374.1 71.05 A 7.535 7.535 0 0 0 375.51 71.5 Q 376.23 71.659 377.085 71.734 A 18.582 18.582 0 0 0 378.7 71.8 A 22.081 22.081 0 0 0 380.793 71.71 Q 385.1 71.297 385.1 69 A 2.223 2.223 0 0 0 384.63 67.647 Q 384.396 67.333 384.046 67.042 A 4.923 4.923 0 0 0 383.8 66.85 Q 382.806 66.123 380.583 65.368 A 37.4 37.4 0 0 0 379.1 64.9 L 374 63.4 Q 369.3 62 366.15 59.2 A 9.231 9.231 0 0 1 363.062 52.984 A 12.914 12.914 0 0 1 363 51.7 Q 363 48.1 365.05 45.3 Q 367.1 42.5 370.7 40.85 A 18.281 18.281 0 0 1 376.78 39.282 A 22.139 22.139 0 0 1 378.7 39.2 A 21.822 21.822 0 0 1 383.64 39.731 A 15.867 15.867 0 0 1 389.4 42.3 Q 393.7 45.4 394.3 50.3 L 391.3 50.6 A 7.959 7.959 0 0 0 388.07 44.944 A 11.054 11.054 0 0 0 387.45 44.5 Q 384.197 42.331 379.299 42.207 A 23.71 23.71 0 0 0 378.7 42.2 A 18.432 18.432 0 0 0 374.619 42.629 A 13.07 13.07 0 0 0 369.6 44.9 A 9.848 9.848 0 0 0 367.424 47.097 A 7.807 7.807 0 0 0 366 51.7 A 9.137 9.137 0 0 0 366.284 54.043 A 6.384 6.384 0 0 0 368.4 57.4 A 13.377 13.377 0 0 0 370.63 58.883 Q 371.772 59.497 373.169 60.023 A 29.591 29.591 0 0 0 375.2 60.7 L 380.7 62.3 A 21.523 21.523 0 0 1 383.493 63.326 Q 386.573 64.731 387.594 66.749 A 4.697 4.697 0 0 1 388.1 68.9 A 4.846 4.846 0 0 1 387.502 71.319 Q 386.984 72.239 386.019 72.939 A 6.922 6.922 0 0 1 385.55 73.25 A 9.587 9.587 0 0 1 383.035 74.296 Q 381.859 74.611 380.459 74.729 A 20.927 20.927 0 0 1 378.7 74.8 Q 374.7 74.8 372.15 73.3 A 7.23 7.23 0 0 1 370.726 72.226 A 4.706 4.706 0 0 1 369.3 69.4 Z M 442.1 69.4 L 445.1 69 A 2.003 2.003 0 0 0 445.767 70.335 Q 446.055 70.607 446.468 70.836 A 5.243 5.243 0 0 0 446.9 71.05 A 7.535 7.535 0 0 0 448.31 71.5 Q 449.03 71.659 449.885 71.734 A 18.582 18.582 0 0 0 451.5 71.8 A 22.081 22.081 0 0 0 453.593 71.71 Q 457.9 71.297 457.9 69 A 2.223 2.223 0 0 0 457.43 67.647 Q 457.196 67.333 456.846 67.042 A 4.923 4.923 0 0 0 456.6 66.85 Q 455.606 66.123 453.383 65.368 A 37.4 37.4 0 0 0 451.9 64.9 L 446.8 63.4 Q 442.1 62 438.95 59.2 A 9.231 9.231 0 0 1 435.862 52.984 A 12.914 12.914 0 0 1 435.8 51.7 Q 435.8 48.1 437.85 45.3 Q 439.9 42.5 443.5 40.85 A 18.281 18.281 0 0 1 449.58 39.282 A 22.139 22.139 0 0 1 451.5 39.2 A 21.822 21.822 0 0 1 456.44 39.731 A 15.867 15.867 0 0 1 462.2 42.3 Q 466.5 45.4 467.1 50.3 L 464.1 50.6 A 7.959 7.959 0 0 0 460.87 44.944 A 11.054 11.054 0 0 0 460.25 44.5 Q 456.997 42.331 452.099 42.207 A 23.71 23.71 0 0 0 451.5 42.2 A 18.432 18.432 0 0 0 447.419 42.629 A 13.07 13.07 0 0 0 442.4 44.9 A 9.848 9.848 0 0 0 440.224 47.097 A 7.807 7.807 0 0 0 438.8 51.7 A 9.137 9.137 0 0 0 439.084 54.043 A 6.384 6.384 0 0 0 441.2 57.4 A 13.377 13.377 0 0 0 443.43 58.883 Q 444.572 59.497 445.969 60.023 A 29.591 29.591 0 0 0 448 60.7 L 453.5 62.3 A 21.523 21.523 0 0 1 456.293 63.326 Q 459.373 64.731 460.394 66.749 A 4.697 4.697 0 0 1 460.9 68.9 A 4.846 4.846 0 0 1 460.302 71.319 Q 459.784 72.239 458.819 72.939 A 6.922 6.922 0 0 1 458.35 73.25 A 9.587 9.587 0 0 1 455.835 74.296 Q 454.659 74.611 453.259 74.729 A 20.927 20.927 0 0 1 451.5 74.8 Q 447.5 74.8 444.95 73.3 A 7.23 7.23 0 0 1 443.526 72.226 A 4.706 4.706 0 0 1 442.1 69.4 Z M 74.3 80.4 L 71.3 80.4 L 71.3 0 L 74.3 0 L 74.3 80.4 Z M 16.2 80.4 L 13.2 80.4 L 13.2 0 L 16.2 0 L 16.2 80.4 Z M 3 80.4 L 0 80.4 L 0 0 L 3 0 L 3 80.4 Z M 9.6 80.4 L 6.6 80.4 L 6.6 0 L 9.6 0 L 9.6 80.4 Z M 80.9 80.4 L 77.9 80.4 L 77.9 0 L 80.9 0 L 80.9 80.4 Z M 67.7 80.4 L 64.7 80.4 L 64.7 0 L 67.7 0 L 67.7 80.4 Z M 112.9 60.9 L 109.2 60.9 L 95 40.2 L 98.7 40.2 L 107 52.3 L 115.3 40.2 L 119 40.2 L 108.9 55.1 L 111 58.2 L 123.4 40.2 L 127.1 40.2 L 112.9 60.9 Z M 50.1 48.7 L 48.2 51.3 L 19.8 10.7 L 19.8 5.6 L 50.1 48.7 Z M 308.4 43.2 L 295.9 43.2 L 295.9 46.8 L 308.6 46.8 A 6.332 6.332 0 0 1 310.393 47.121 A 4.984 4.984 0 0 1 312.45 48.45 A 5.28 5.28 0 0 1 313.792 51.204 A 7.433 7.433 0 0 1 313.9 52.5 A 6.813 6.813 0 0 1 313.643 54.416 A 5.333 5.333 0 0 1 312.4 56.6 A 4.948 4.948 0 0 1 308.814 58.196 A 6.455 6.455 0 0 1 308.6 58.2 L 295.9 58.2 L 295.9 61.8 L 308.4 61.8 Q 312.2 61.8 314.85 59.45 A 7.502 7.502 0 0 0 317.096 55.75 Q 317.437 54.524 317.49 53.053 A 15.273 15.273 0 0 0 317.5 52.5 Q 317.5 47.9 314.85 45.55 Q 312.2 43.2 308.4 43.2 Z M 46 54.5 L 44.2 57.2 L 19.8 22.4 L 19.8 17.1 L 46 54.5 Z M 207.1 80.4 L 204.1 80.4 L 204.1 40.2 L 207.1 40.2 L 207.1 80.4 Z M 162.7 80.4 L 159.7 80.4 L 159.7 40.2 L 162.7 40.2 L 162.7 80.4 Z M 156.1 80.4 L 153.1 80.4 L 153.1 40.2 L 156.1 40.2 L 156.1 80.4 Z M 173.7 80.4 L 170.7 80.4 L 170.7 40.2 L 173.7 40.2 L 173.7 80.4 Z M 253 80.4 L 250 80.4 L 250 40.2 L 253 40.2 L 253 80.4 Z M 289.3 80.4 L 286.3 80.4 L 286.3 40.2 L 289.3 40.2 L 289.3 80.4 Z M 330.5 80.4 L 327.5 80.4 L 327.5 40.2 L 330.5 40.2 L 330.5 80.4 Z M 42 60.3 L 40.2 62.9 L 19.8 33.9 L 19.8 28.6 L 42 60.3 Z M 245 43.2 L 212.1 43.2 L 212.1 40.2 L 245 40.2 L 245 43.2 Z M 431.6 43.2 L 398.7 43.2 L 398.7 40.2 L 431.6 40.2 L 431.6 43.2 Z M 61.1 9.5 L 44.2 34 L 42.4 31.3 L 61.1 4.2 L 61.1 9.5 Z M 197.5 75.3 L 197.5 69.2 L 180.3 45.3 L 180.3 51.4 L 197.5 75.3 Z M 104.8 60.9 L 101.1 60.9 L 86.9 40.2 L 90.6 40.2 L 104.8 60.9 Z M 61.1 21.5 L 48.3 39.8 L 46.5 37.1 L 61.1 16.3 L 61.1 21.5 Z M 61.1 33 L 52.3 45.5 L 50.5 42.9 L 61.1 27.8 L 61.1 33 Z M 111.8 80.4 L 108.8 80.4 L 108.8 63.3 L 111.8 63.3 L 111.8 80.4 Z M 105.2 80.4 L 102.2 80.4 L 102.2 63.3 L 105.2 63.3 L 105.2 80.4 Z M 308.4 49.8 L 295.9 49.8 L 295.9 55.2 L 308.4 55.2 A 3.044 3.044 0 0 0 309.228 55.093 A 2.34 2.34 0 0 0 310.2 54.55 Q 310.761 54.029 310.873 53.025 A 4.775 4.775 0 0 0 310.9 52.5 A 4.425 4.425 0 0 0 310.84 51.744 Q 310.77 51.341 310.619 51.026 A 1.896 1.896 0 0 0 310.2 50.45 A 2.399 2.399 0 0 0 308.894 49.836 A 3.296 3.296 0 0 0 308.4 49.8 Z" vector-effect="non-scaling-stroke"/></g></svg>
         </div>
         <div class="dbs">
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
-            <div class="db">Test</div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
+            <div class="db">
+                <h1>Header</h1>
+                <p>Test test test</p>
+            </div>
         </div>
         <div class="addNewDb">
-            <button>+ Add new</button>
+            <a href="createNewDb.html">+ Add new</a>
         </div>
     </div>
 
