--- a/404.html
+++ b/404.html
@@ -8,7 +8,12 @@
     <title>My interests</title>
 </head>
 <body>
-    <h1>#404 - Not found</h1>
-    <a href="index.html">Go to main page >></a>
+    <div id="pageNotFound">
+        <h1>#404 - Not found</h1>
+        <p>Work in progress</p>
+        <a href="index.html">Go to main page >></a>
+    </div>
+    
+    <script src="dist/404.bundle.js"></script>
 </body>
 </html>
